// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildFixedGatsbyImage jpg with height (400) 1`] = `
Object {
  "aspectRatio": 2,
  "base64": Object {
    "auto": null,
    "blur": 15,
    "dpr": null,
    "fit": "max",
    "height": null,
    "quality": 20,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 100,
  },
  "src": Object {
    "auto": null,
    "blur": null,
    "dpr": null,
    "fit": "max",
    "height": 400,
    "quality": null,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 400,
  },
  "srcSet": Array [
    Object {
      "descriptor": "1x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 1,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
    Object {
      "descriptor": "1.5x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 1.5,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
    Object {
      "descriptor": "2x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 2,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
  ],
}
`;

exports[`buildFixedGatsbyImage jpg with rect without params 1`] = `
Object {
  "aspectRatio": 2,
  "base64": Object {
    "auto": null,
    "blur": 15,
    "dpr": null,
    "fit": "max",
    "height": null,
    "quality": 20,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 100,
  },
  "src": Object {
    "auto": null,
    "blur": null,
    "dpr": null,
    "fit": "max",
    "height": 200,
    "quality": null,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 400,
  },
  "srcSet": Array [
    Object {
      "descriptor": "1x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 1,
        "fit": "max",
        "height": 200,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
    Object {
      "descriptor": "1.5x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 1.5,
        "fit": "max",
        "height": 200,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
    Object {
      "descriptor": "2x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 2,
        "fit": "max",
        "height": 200,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
  ],
}
`;

exports[`buildFixedGatsbyImage jpg with width (600) 1`] = `
Object {
  "aspectRatio": 2,
  "base64": Object {
    "auto": null,
    "blur": 15,
    "dpr": null,
    "fit": "max",
    "height": null,
    "quality": 20,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 100,
  },
  "src": Object {
    "auto": null,
    "blur": null,
    "dpr": null,
    "fit": "max",
    "height": 300,
    "quality": null,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 600,
  },
  "srcSet": Array [
    Object {
      "descriptor": "1x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 1,
        "fit": "max",
        "height": 300,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 600,
      },
    },
    Object {
      "descriptor": "1.5x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 1.5,
        "fit": "max",
        "height": 300,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 600,
      },
    },
    Object {
      "descriptor": "2x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 2,
        "fit": "max",
        "height": 300,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 600,
      },
    },
  ],
}
`;

exports[`buildFixedGatsbyImage jpg with width (600) and height (400) 1`] = `
Object {
  "aspectRatio": 2,
  "base64": Object {
    "auto": null,
    "blur": 15,
    "dpr": null,
    "fit": "max",
    "height": null,
    "quality": 20,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 100,
  },
  "src": Object {
    "auto": null,
    "blur": null,
    "dpr": null,
    "fit": "max",
    "height": 400,
    "quality": null,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 600,
  },
  "srcSet": Array [
    Object {
      "descriptor": "1x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 1,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 600,
      },
    },
    Object {
      "descriptor": "1.5x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 1.5,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 600,
      },
    },
    Object {
      "descriptor": "2x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 2,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 600,
      },
    },
  ],
}
`;

exports[`buildFixedGatsbyImage jpg without params 1`] = `
Object {
  "aspectRatio": 2,
  "base64": Object {
    "auto": null,
    "blur": 15,
    "dpr": null,
    "fit": "max",
    "height": null,
    "quality": 20,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 100,
  },
  "src": Object {
    "auto": null,
    "blur": null,
    "dpr": null,
    "fit": "max",
    "height": 200,
    "quality": null,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 400,
  },
  "srcSet": Array [
    Object {
      "descriptor": "1x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 1,
        "fit": "max",
        "height": 200,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
    Object {
      "descriptor": "1.5x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 1.5,
        "fit": "max",
        "height": 200,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
    Object {
      "descriptor": "2x",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": 2,
        "fit": "max",
        "height": 200,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
  ],
}
`;

exports[`buildFluidGatsbyImage jpg with max height (600) 1`] = `
Object {
  "aspectRatio": 2,
  "base64": Object {
    "auto": null,
    "blur": 15,
    "dpr": null,
    "fit": "max",
    "height": null,
    "quality": 20,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 100,
  },
  "src": Object {
    "auto": null,
    "blur": null,
    "dpr": null,
    "fit": "max",
    "height": 600,
    "quality": null,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 800,
  },
  "srcSet": Array [
    Object {
      "descriptor": "1200w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 600,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 1200,
      },
    },
    Object {
      "descriptor": "1600w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 600,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 1600,
      },
    },
    Object {
      "descriptor": "200w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 600,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 200,
      },
    },
    Object {
      "descriptor": "400w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 600,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
    Object {
      "descriptor": "800w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 600,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 800,
      },
    },
  ],
}
`;

exports[`buildFluidGatsbyImage jpg with max width (1000) 1`] = `
Object {
  "aspectRatio": 2,
  "base64": Object {
    "auto": null,
    "blur": 15,
    "dpr": null,
    "fit": "max",
    "height": null,
    "quality": 20,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 100,
  },
  "src": Object {
    "auto": null,
    "blur": null,
    "dpr": null,
    "fit": "max",
    "height": 500,
    "quality": null,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 1000,
  },
  "srcSet": Array [
    Object {
      "descriptor": "1000w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 500,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 1000,
      },
    },
    Object {
      "descriptor": "1500w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 500,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 1500,
      },
    },
    Object {
      "descriptor": "2000w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 500,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 2000,
      },
    },
    Object {
      "descriptor": "250w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 500,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 250,
      },
    },
    Object {
      "descriptor": "500w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 500,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 500,
      },
    },
  ],
}
`;

exports[`buildFluidGatsbyImage jpg with max width (1000) and max height (600) 1`] = `
Object {
  "aspectRatio": 2,
  "base64": Object {
    "auto": null,
    "blur": 15,
    "dpr": null,
    "fit": "max",
    "height": null,
    "quality": 20,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 100,
  },
  "src": Object {
    "auto": null,
    "blur": null,
    "dpr": null,
    "fit": "max",
    "height": 600,
    "quality": null,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 1000,
  },
  "srcSet": Array [
    Object {
      "descriptor": "1000w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 600,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 1000,
      },
    },
    Object {
      "descriptor": "1500w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 600,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 1500,
      },
    },
    Object {
      "descriptor": "2000w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 600,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 2000,
      },
    },
    Object {
      "descriptor": "250w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 600,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 250,
      },
    },
    Object {
      "descriptor": "500w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 600,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 500,
      },
    },
  ],
}
`;

exports[`buildFluidGatsbyImage jpg with rect without params 1`] = `
Object {
  "aspectRatio": 2,
  "base64": Object {
    "auto": null,
    "blur": 15,
    "dpr": null,
    "fit": "max",
    "height": null,
    "quality": 20,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 100,
  },
  "src": Object {
    "auto": null,
    "blur": null,
    "dpr": null,
    "fit": "max",
    "height": 400,
    "quality": null,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 800,
  },
  "srcSet": Array [
    Object {
      "descriptor": "1200w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 1200,
      },
    },
    Object {
      "descriptor": "1600w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 1600,
      },
    },
    Object {
      "descriptor": "200w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 200,
      },
    },
    Object {
      "descriptor": "400w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
    Object {
      "descriptor": "800w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 800,
      },
    },
  ],
}
`;

exports[`buildFluidGatsbyImage jpg with srcSetBreakpoints 1`] = `
Object {
  "aspectRatio": 2,
  "base64": Object {
    "auto": null,
    "blur": 15,
    "dpr": null,
    "fit": "max",
    "height": null,
    "quality": 20,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 100,
  },
  "src": Object {
    "auto": null,
    "blur": null,
    "dpr": null,
    "fit": "max",
    "height": 400,
    "quality": null,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 800,
  },
  "srcSet": Array [
    Object {
      "descriptor": "400w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
    Object {
      "descriptor": "800w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 800,
      },
    },
  ],
}
`;

exports[`buildFluidGatsbyImage jpg without params 1`] = `
Object {
  "aspectRatio": 2,
  "base64": Object {
    "auto": null,
    "blur": 15,
    "dpr": null,
    "fit": "max",
    "height": null,
    "quality": 20,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 100,
  },
  "src": Object {
    "auto": null,
    "blur": null,
    "dpr": null,
    "fit": "max",
    "height": 400,
    "quality": null,
    "rect": null,
    "urlOrigin": "https://images.prismic.io",
    "urlPathname": "/reponame/imagehash.jpg",
    "width": 800,
  },
  "srcSet": Array [
    Object {
      "descriptor": "1200w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 1200,
      },
    },
    Object {
      "descriptor": "1600w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 1600,
      },
    },
    Object {
      "descriptor": "200w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 200,
      },
    },
    Object {
      "descriptor": "400w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 400,
      },
    },
    Object {
      "descriptor": "800w",
      "url": Object {
        "auto": null,
        "blur": null,
        "dpr": null,
        "fit": "max",
        "height": 400,
        "quality": null,
        "rect": null,
        "urlOrigin": "https://images.prismic.io",
        "urlPathname": "/reponame/imagehash.jpg",
        "width": 800,
      },
    },
  ],
}
`;
